log
vie 21 abr 2023 09:57:42 -04: 
 tests:  1|8
total_score: 0/70
03d2eb4
vie 21 abr 2023 10:10:35 -04: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
03d2eb4
vie 21 abr 2023 10:24:13 -04: 
 treemap.c | 29 +++++++++++++++++++++++++----
 1 file changed, 25 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:13: error: implicit declaration of function ‘is_lower’ [-Werror=implicit-function-declaration]
   64 |         if (is_lower(tree->current->pair,key))
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d7fbcf7
vie 21 abr 2023 10:24:39 -04: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:13: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   64 |         if (lower_than(tree->current->pair,key))
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f3085eb
